styles.css
:root {
  --primary-color: #ff8984;
  --text-default: white;
  --text-disabled: #9b96ac;
  --white: white;
  --violet-default: #88839e;
  --violet-dark: #7a7593;
  --violet-selected: #625e77;
  --bg-light-grey: #4a4f56;
  --bg-grey: #3b3f45;
}
html,
body {
  height: 100%;
  box-sizing: border-box;
  font-family: "Roboto-Regular", Helvetica;
}
h1 {
  font-family: inherit;
  font-size: 24px;
  line-height: 28px;
  font-weight: 600;
  text-align: center;
}
.subtitle {
  font-family: inherit;
  font-size: 16px;
  font-weight: 400;
  line-height: 19px;
}
.body1 {
  font-family: inherit;
  font-size: 18px;
  font-weight: 400;
  height: 21px;
}
.caption {
  font-family: inherit;
  font-size: 11px;
  font-weight: 400;
  height: 16px;
}
.content {
  border-style: solid;
  border-color: white;
  border-width: 5px;
}

.header {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding: 20px 0 12px 0;
  gap: 4px;
  background-color: var(--bg-light-grey);
  color: var(--primary-color);
}
main {
  background-color: var(--bg-grey);
  height: 100%;
  padding-top: 20px;
}
.label {
  width: 100%;
  height: 100%;
  align-items: center;
  min-height: 44px;
  cursor: pointer;
  padding: 9px 12px 9px 0;
  box-sizing: border-box;
}
.container {
  margin: 0 auto;
  max-width: 534px;
}
.list {
  margin-bottom: 44px;
}
.list-item {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 12px;
  gap: 8px;
  box-sizing: border-box;
  color: var(--text-default);
  background-color: var(--violet-default);
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
}
.list-item:nth-child(even) {
  background-color: var(--violet-dark);
}
.list-item:hover {
  background-color: var(--violet-selected);
  box-sizing: border-box;
  border-top: 3px solid #fff;
  border-bottom: 3px solid #fff;
  transition: all 0.1s ease-in;
}
.list-item:active {
  background-color: var(--primary-color);
  opacity: 0.9;
}
input[type="checkbox"]:checked + label {
  text-decoration: line-through;
  color: var(--text-disabled);
}
.list-item:has(input[type="checkbox"]:checked) {
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}
small::before {
  content: "(";
  margin-left: 4px;
}
small::after {
  content: ")";
}
.panel-below {
  width: 100%;
  padding: 12px 0 12px 0;
  background-color: var(--bg-light-grey);
  text-align: center;
  color: var(--primary-color);
}
input[type="checkbox"] {
  width: 20px;
  height: 20px;
  accent-color: var(--white);
  color: black;
  border-radius: 0px;
}

